feature for input field validation based on backend query

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -7,5 +7,7 @@
 @import url("./splash/show-button.css");
 @import url("./splash/username-password.css");
 @import url("./splash/media-query.css");
+@import url("./signup/window.css");
+@import url("./signup/username-password.css");
 @import url("./home/window.css");
 @import url("./footer.css");
