sign up page is mostly functional

--- a/assets/stylesheets/signup/username-password.css
+++ b/assets/stylesheets/signup/username-password.css
@@ -1,12 +1,13 @@
-.signinBox{
+.signupBox{
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center; 
 }
+input { outline: 0px;}
 
 /* ============THIS IS FOR THE LOGO TEXT============ */
-.signinBox.signinBox__logo  p {
+.signupBox.signupBox__logo  p {
   display: flex;
   justify-content: center;
   letter-spacing: 1px;
@@ -17,7 +18,7 @@
   padding-top: 18px;
   font-weight: 500;
 }
-.signinBox__signupText  p{
+.signupBox__signupText  p{
 color: rgba(142,142,142,1);
 font-size: 17px;
 font-weight: 600;
@@ -26,7 +27,7 @@ margin: 0 40px 10px;
 text-align: center;
 }
 /* ============THIS IS FOR THE INPUT FIELDS============ */
-.signinBox__inputText {
+.signupBox__inputText {
   font-size: 12px;
   height: 26px;
   color: rgb(38,38,38);
@@ -39,18 +40,17 @@ text-align: center;
   outline-width: 0;
 }
 
-.signinBox__inputText--active {
+.signupBox__inputText--active {
   top: -1px;
 }
 
-.signinBox__passwordShowContainer {
+.signupBox__passwordShowContainer {
   flex-direction: row;
   height: 19.55px;
 }
 
-.signinBox__passwordFieldContainer, .signinBox__usernameFieldContainer,.signinBox__emailFieldContainer,.signinBox__fullnameFieldContainer { 
+.signupBox__fieldContainer{ 
   position: relative;
-  align-items: center;
   justify-content: flex-end;
   height: 36px;
   width: 258.8px;
@@ -59,20 +59,17 @@ text-align: center;
   background-color: rgb(250,250,250);
   color: rgba(38,38,38);
   box-sizing: border-box;
+  display:flex;
+  align-items: flex-start;
+  width: 258.8px;
 }
-.signinBox__passwordFieldContainer:hover, .signinBox__usernameFieldContainer:hover, .signinBox__passwordPlaceholder:hover, .signinBox__usernamePlaceholder:hover,
-.signinBox__emailFieldContainer:hover, .signinBox__emailFieldContainer:hover, .signinBox__fullnamePlaceholder:hover, .signinBox__fullnamePlaceholder:hover{
+
+.signupBox__fieldContainer:hover {
+  border: 1px solid rgb(150, 150, 150);
   cursor: text;
 }
 
-.signinBox__passwordFieldContainer:hover, .signinBox__usernameFieldContainer:hover,
-.signinBox__emailFieldContainer:hover, .signinBox__fullnameFieldContainer:hover {
-  border: 1px solid rgb(150, 150, 150)
-
-}
-
-.signinBox__passwordPlaceholder, .signinBox__usernamePlaceholder,
-.signinBox__emailPlaceholder, .signinBox__fullnamePlaceholder  {
+.signupBox__floatingLabel {
   color: rgba(142,142,142);
   position: relative;
   height: 22px;
@@ -81,30 +78,21 @@ text-align: center;
   font-size: 13px;
   align-self: flex-start
 }
-.signinBox__passwordPlaceholder--inactive, .signinBox__usernamePlaceholder--inactive,
-.signinBox__emailPlaceholder--inactive, .signinBox__fullnamePlaceholder--inactive {
+.signupBox__placeholder--inactive {
   transition: font-size .1s ease-out, top .1s ease-out;
   top: 8px;
   left:9px;
   font-size: 13px;
 }
 
-.signinBox__passwordPlaceholder--active, .signinBox__usernamePlaceholder--active
-.signinBox__emailPlaceholder--active, .signinBox__fullnamePlaceholder--active {
+.signupBox__placeholder--active {
   transition: font-size .1s ease-in, top .1s ease-in;
   top:0px;
   left:9px;
   font-size:9px;
 }
 
-.signinBox__passwordFieldContainer, .signinBox__usernameFieldContainer,
-.signinBox__emailFieldContainer, .signinBox__fullnameFieldContainer {
-  display:flex;
-  align-items: flex-start;
-  width: 258.8px;
-}
-
-.signinBox__statusImage {
+.signupBox__statusImage {
   visibility: hidden;
   position: absolute;
   left: 224px;
@@ -119,7 +107,7 @@ text-align: center;
 .available  {visibility: visible;filter: contrast(10%) sepia(20%) saturate(2000%) hue-rotate(60deg);}
 .tooshort  {visibility: visible;filter: contrast(10%) sepia(20%) saturate(10%) hue-rotate(60deg);}
 
-.signinBox__statusImageTextLabel {
+.signupBox__statusImageTextLabel {
   visibility: hidden;
   position: absolute;
   left: 210px;
@@ -133,18 +121,18 @@ text-align: center;
 
 
 /* ============THIS IS FOR THE BUTTONS============ */
-div.signinBox__signinButtons {  
+div.signupBox__signupButtons {  
   display: flex;
   flex-direction: row;
 }
 
-.signinBox__button {
+.signupBox__button {
   height: 30px;
   font-size: 14px;
   font-weight: 600;
   color: white;
   border-radius: 5px;
-  width: 127px;
+  width: 260px;
   box-sizing: border-box;
   border: transparent;
   background-color: rgba(0, 149, 246, 1);
@@ -155,45 +143,72 @@ div.signinBox__signinButtons {
   outline-width: 0;
 }
 
-.signinBox__button:hover { cursor: pointer;}
-.signinBox__button:hover:disabled { cursor: default;}
-.signinBox__button:disabled { background-color: rgba(0, 149, 246, 0.3);}
-.signinBox__button a , .signinBox__button button {outline-width: 0;}
+.signupBox__button:hover { cursor: pointer;}
+.signupBox__button:hover:disabled { cursor: default;}
+.signupBox__button:disabled { background-color: rgba(0, 149, 246, 0.3);}
+.signupBox__button a , .signupBox__button button {outline-width: 0;}
+
+.signupBox__passwordShowContainer {
+  flex-direction: row;
+  height: 19.55px;
+}
+.signupShowBtn{
+  right: 46px;
+  top: -8px;
+  height: 26px;
+  border: none;
+  background-color: rgb(250,250,250);
+  width: 32px;
+  height: 18px;
+  font-weight: 600;
+  font-size: 14px;
+  position: relative;
+  outline-width: 0;
+}
+
+.signupShowBtn {cursor: pointer;}
+
+.signupShowBtn--hidden{
+  box-sizing: border-box;
+  color: red;
+  z-index: -1;
+  visibility: hidden;
+}
 
 /* ============THIS IS FOR THE OR TEXT============ */
-.signinBox__orContainer{
+.signupBox__orContainer{
   display:flex;
   flex-direction: row;
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
   color:#8e8e8e
 }
-.signinBox__orSpacer {
+.signupBox__orSpacer {
   height: .8px;
   width: 107.233px;
   line-height: 18px;
   box-sizing: border-box;
   background-color:  rgba(219,219,219);
 }
-.signinBox__or {
+.signupBox__or {
   margin: 0 18px;
   font-size: 13px;
   font-weight: 600;
 }
 
 /* ============THIS IS FOR THE Error Message TEXT============ */
-.signinBox__errorText {
+.signupBox__errorText {
   color: rgba(237,73,86,1);
   font-size: 14;
   text-align: center;
 }
 
 /* ============THIS IS FOR THE FB TEXT============ */
-.signinBox__fbook > img {
+.signupBox__fbook > img {
   height: 16px;
   width: 16px;
   margin-right: 8px;
 }
-.signinBox__fbook {
+.signupBox__fbook {
   display:flex;
   flex-direction: row;
   font-size: 14px;
@@ -204,7 +219,7 @@ div.signinBox__signinButtons {
 }
 
 /* ============THIS IS FOR THE FORGOT PASSWORD TEXT============ */
-.signinBox__forgotPassword {
+.signupBox__forgotPassword {
   color: rgb(0,55,107);
   font-size: 12px;
   line-height: 14px;
@@ -212,10 +227,10 @@ div.signinBox__signinButtons {
   text-align: center;
   justify-content: flex-start;
 }
-.signinBox__forgotPassword a {outline-width: 0;}
+.signupBox__forgotPassword a {outline-width: 0;}
 
 /* ============THIS IS FOR THE SIGN UP TEXT============ */
-.signinBox__signUp > p{ 
+.signupBox__login > p { 
   color: rgb(38,38,38);
   font-size: 14px;
   text-align: center;
@@ -223,28 +238,37 @@ div.signinBox__signinButtons {
   margin: 5px;
 }
 
-.signinBox__signUp  {
+.signupBox__login  {
   display: flex;
   flex-direction: row;
 }
 
-.signinBox__signUp > a {
+.signupBox__login > a {
   color: rgb(0,149,246);
   font-weight: 600;
   text-align: center;
   font-size:14px;
   outline-width: 0;
 }
+/* ============THIS IS FOR THE APP/STORE TEXT============ */
 
+p.signupBox.signupBox__termsText {
+    color: rgba( 142,142,142 ,1);
+    font-size: 12px;
+    line-height: 16px;
+    margin: 10px 40px;
+    text-align: center;
+}
 
 /* ============THIS IS FOR THE APP/STORE TEXT============ */
-.signinBox__getAppButtons{
+.signupBox__getAppButtons{
   display: flex;
   flex-direction: row;
 }
-.signinBox__appStore {
+.signupBox__appStore {
   width:135px;
   height:auto;
 }
-.signinBox__googlePlay { width:135px; height:auto;}
-.signinBox__getApp > p {  font-size: 14px;}
+.signupBox__googlePlay { width:135px; height:auto;}
+.signupBox__getApp > p {  font-size: 14px;}
+.signupBox__getAppButtons img { padding:4px}
