--- a/views/signup.pug
+++ b/views/signup.pug
@@ -1,55 +1,64 @@
 extends index
 block content
   div.mainBoxSignup
-    div.signinBox.signinBox__logo
+    div.signupBox.signupBox__logo
       p Pikagram
 
-    div.signinBox.signinBox__signupText
+    div.signupBox.signupBox__signupText
       p Sign up to see photos and videos from your friends. 
 
-    div.signinBox.signinBox__emailField
-      div.signinBox.signinBox__emailFieldContainer
-        label.signinBox.signinBox__floatingLabel.signinBox__emailPlaceholder Email 
-        input.signinBox.signinBox__inputText.signinBox__emailInput(type="text" name="email" )
-        img.signinBox.signinBox__statusImage.signinBox__emailStatusImage(src="https://cdn4.iconfinder.com/data/icons/oakcons-2/16/Pokeball-512.png" alt="Girl in a jacket")
-        div.signinBox__statusImageTextLabel.signinBox__emailImageText  
+    div.signupBox.signupBox__emailField
+      div.signupBox.signupBox__fieldContainer.signupBox__emailFieldContainer
+        label.signupBox.signupBox__floatingLabel.signupBox__emailPlaceholder Email 
+        input.signupBox.signupBox__inputText.signupBox__emailInput(type="text" name="email" )
+        img.signupBox.signupBox__statusImage.signupBox__emailStatusImage(src="https://cdn4.iconfinder.com/data/icons/oakcons-2/16/Pokeball-512.png" alt="Girl in a jacket")
+        div.signupBox__statusImageTextLabel.signupBox__emailImageText  
         
-    div.signinBox.signinBox__fullnameField
-      div.signinBox.signinBox__fullnameFieldContainer
-        label.signinBox.signinBox__floatingLabel.signinBox__fullnamePlaceholder Full Name 
-        input.signinBox.signinBox__inputText.signinBox__fullnameInput(type="text" name="fullname" )
-        img.signinBox.signinBox__statusImage.signinBox__fullnameStatusImage(src="https://cdn4.iconfinder.com/data/icons/oakcons-2/16/Pokeball-512.png" alt="Girl in a jacket")
-        div.signinBox__statusImageTextLabel.signinBox__fullnameImageText 
+    div.signupBox.signupBox__firstnameField
+      div.signupBox.signupBox__fieldContainer.signupBox__firstnameFieldContainer
+        label.signupBox.signupBox__floatingLabel.signupBox__firstnamePlaceholder First Name 
+        input.signupBox.signupBox__inputText.signupBox__firstnameInput(type="text" name="firstname" )
+        img.signupBox.signupBox__statusImage.signupBox__firstnameStatusImage(src="https://cdn4.iconfinder.com/data/icons/oakcons-2/16/Pokeball-512.png" alt="Girl in a jacket")
+        div.signupBox__statusImageTextLabel.signupBox__firstnameImageText 
 
-    div.signinBox.signinBox__usernameField
-      div.signinBox.signinBox__usernameFieldContainer
-        label.signinBox.signinBox__floatingLabel.signinBox__usernamePlaceholder Username 
-        input.signinBox.signinBox__inputText.signinBox__usernameInput(type="text" name="username" ) 
-        img.signinBox.signinBox__statusImage.signinBox__usernameStatusImage(src="https://cdn4.iconfinder.com/data/icons/oakcons-2/16/Pokeball-512.png" alt="Girl in a jacket")
-        div.signinBox__statusImageTextLabel.signinBox__usernameImageText 
+    div.signupBox.signupBox__lastnameField
+      div.signupBox.signupBox__fieldContainer.signupBox__lastnameFieldContainer
+        label.signupBox.signupBox__floatingLabel.signupBox__lastnamePlaceholder Last Name 
+        input.signupBox.signupBox__inputText.signupBox__lastnameInput(type="text" name="lastname" )
+        img.signupBox.signupBox__statusImage.signupBox__lastnameStatusImage(src="https://cdn4.iconfinder.com/data/icons/oakcons-2/16/Pokeball-512.png" alt="Girl in a jacket")
+        div.signupBox__statusImageTextLabel.signupBox__lastnameImageText 
 
-    div.signinBox.signinBox__passwordField
-      div.signinBox.signinBox__passwordFieldContainer
-        label.signinBox.signinBox__floatingLabel.signinBox__passwordPlaceholder Password
-        input.signinBox.signinBox__inputText.signinBox__passwordInput(type="password" name="password")
-        img.signinBox.signinBox__statusImage.signinBox__passwordStatusImage(src="https://cdn4.iconfinder.com/data/icons/oakcons-2/16/Pokeball-512.png" alt="Girl in a jacket")
-        div.signinBox__statusImageTextLabel.signinBox__passwordImageText 
+    div.signupBox.signupBox__usernameField
+      div.signupBox.signupBox__fieldContainer.signupBox__usernameFieldContainer
+        label.signupBox.signupBox__floatingLabel.signupBox__usernamePlaceholder Username 
+        input.signupBox.signupBox__inputText.signupBox__usernameInput(type="text" name="username" ) 
+        img.signupBox.signupBox__statusImage.signupBox__usernameStatusImage(src="https://cdn4.iconfinder.com/data/icons/oakcons-2/16/Pokeball-512.png" alt="Girl in a jacket")
+        div.signupBox__statusImageTextLabel.signupBox__usernameImageText 
 
-    div.signinBox.signinBox__signinButtons 
-      button.signinBox.signinBox__button.signupButton(disabled=true) Sign up
+    div.signupBox.signupBox__passwordField
+      div.signupBox.signupBox__fieldContainer.signupBox__passwordFieldContainer
+        label.signupBox.signupBox__floatingLabel.signupBox__passwordPlaceholder Password
+        div.signupBox.signupBox__passwordShowContainer
+          input.signupBox.signupBox__inputText.signupBox__passwordInput(type="password" name="password")
+          button.signBox.signupShowBtn.signupShowBtn--hidden Show
+        img.signupBox.signupBox__statusImage.signupBox__passwordStatusImage(src="https://cdn4.iconfinder.com/data/icons/oakcons-2/16/Pokeball-512.png" alt="Girl in a jacket")
+        div.signupBox__statusImageTextLabel.signupBox__passwordImageText 
 
-    div.signinBox.signinBox__termsOfCondition
-      p.signinBox.signinBox__fbookText By signing up, you agree to our Terms , Data Policy and Cookies Policy .
+    div.signupBox.signupBox__signupButtons 
+      button.signupBox.signupBox__button.signupButton(disabled=true) Sign up
 
-    div.signinBox.signinBox__signin
+    div.signupBox.signupBox__terms
+      p.signupBox.signupBox__termsText By signing up, you agree to our Terms , Data Policy and Cookies Policy .
+
+    div.signupBox.signupBox__login
       p Have an account?  
       a(href="login") Log in
       
-    div.signinBox.signinBox__getApp
+    div.signupBox.signupBox__getApp
       p Get the app.
-    div.signinBox.signinBox__getAppButtons
-      a(href="https://itunes.apple.com/app/instagram/id389801252?pt=428156&ct=igweb.loginPage.badge&mt=8&vt=lo"): img.signinBox.signinBox__appStore(src='/staticImages/appStore.png') 
-      a(href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DsigninPage%26ig_mid%3D6535D6D9-46B8-426F-9CB4-0C0AA43E7C80%26utm_content%3Dlo%26utm_medium%3Dbadge"): img.signinBox.signinBox__googlePlay(src='/staticImages/playStore.png') 
+    div.signupBox.signupBox__getAppButtons
+      a(href="https://itunes.apple.com/app/instagram/id389801252?pt=428156&ct=igweb.loginPage.badge&mt=8&vt=lo"): img.signupBox.signupBox__appStore(src='/staticImages/appStore.png') 
+      a(href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DsignupPage%26ig_mid%3D6535D6D9-46B8-426F-9CB4-0C0AA43E7C80%26utm_content%3Dlo%26utm_medium%3Dbadge"): img.signupBox.signupBox__googlePlay(src='/staticImages/playStore.png') 
       //- img(src='/staticImages/123.png') 
   include footer
   script(type="module" src="/staticJs/signup.js")
