--- a/views/index.pug
+++ b/views/index.pug
@@ -4,7 +4,7 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     link(rel="stylesheet", href='/staticCSS/main.css')
-    link(rel="icon" href='/staticIcons/pikachu.svg')
+    link(rel="icon" href='/staticIcons/camera.svg')
     title Pikagram
   body
 block content
