--- a/assets/stylesheets/splash/username-password.css
+++ b/assets/stylesheets/splash/username-password.css
@@ -102,7 +102,7 @@ div.loginBox__loginButtons {
 }
 
 .demo__button{ background-color: rgba(0, 149, 246, 0.3);}
-.loginBox__button:hover { cursor: pointer;}
+.login__button:hover { cursor: pointer;}
 .login__button:hover:disabled { cursor: default;}
 .login__button:disabled { background-color: rgba(0, 149, 246, 0.3);}
 .demo__button:hover { background-color: rgba(0, 149, 246, 1);}
