--- a/views/profile.pug
+++ b/views/profile.pug
@@ -1,24 +1,28 @@
 extends index
 block content
   include navbar
-  .profileContainer 
-  img.profileContainer.profilePic(src="/" alt="profile pic")
-  .profileContainer.username
-  .profileContainer.dropDown this is a beautiful gear
-  .profileContainer.button Edit Profile
-  .profileContainer.fullName
-  .profileContainer.bio
-  .profileContainer.numPostsContainer
-    .profileContainer.numPosts
-    .profileContainer posts
-  .profileContainer.numFollowersContainer
-    .profileContainer.numFollowers
-    .profileContainer Followers
-  .profileContainer.numFollowingContainer
-    .profileContainer.numFollowing
-    .profileContainer following
+  .profileContainerDiv 
+    img.profileContainer.profilePic(src="/" alt="profile pic")
+    .usernameContainer
+      .profileContainer.username
+      button.editProfile Edit Profile
+      .profileContainer.dropDown this-is-a-beautiful-gear
+
+    .profileContainer.fullName
+      .profileId= profileId
+    .profileContainer.bio
+    .statsContainer
+      .profileContainer.numPostsContainer
+        .profileContainer.numPosts
+        .profileContainer posts
+      .profileContainer.numFollowersContainer
+        .profileContainer.numFollowers
+        .profileContainer Followers
+      .profileContainer.numFollowingContainer
+        .profileContainer.numFollowing
+        .profileContainer following
   
-  .postsContainer posts
+    .postsContainer posts
   include footer
   script(src="staticJs/profile.js" type="module")
   
