--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -8,4 +8,8 @@
 @import url("./splash/username-password.css");
 @import url("./splash/media-query.css");
 @import url("./home/window.css");
+@import url("./home/posts.css");
+@import url("./profile/profile.css");
+@import url("./edit-profile/edit-profile.css");
+@import url("./change-password/change-password.css");
 @import url("./footer.css");
