--- a/views/change-password.pug
+++ b/views/change-password.pug
@@ -7,13 +7,13 @@ block content
     form.changePasswordForm(action="post")
       .changePassword__oldPasswordContainer
         label(for="oldpassword") Old Password
-        input.editProfileName(type="text")
+        input.changePassword__oldPasswordInput(type="text" name="oldpassword")
       .changePassword__newPasswordContainer
         label(for="password") New Password
-        input.editProfileName(type="text")
+        input.changePassword__newPasswordInput(type="text" name="newpassword")
       .changePassword__confirmPasswordContainer
         label(for="confirmpassword") Confirm New Password
-        input.editProfileName(type="text")
-      button.changePasswordSubmit(type="submit") Submit
+        input.changePassword__confirmPasswordInput(type="text" name="confirmpassword")
+      button.changePasswordSubmit(type="submit" disabled) Submit
     script(src="/staticJs/change-password.js")
 
