--- a/assets/stylesheets/edit-profile/edit-profile.css
+++ b/assets/stylesheets/edit-profile/edit-profile.css
@@ -12,15 +12,20 @@
   grid-area: editprofile;
 }
 
+
 .changePassword{
   grid-area: changepassword;
 }
-
+.editProfile__profileInfo{
+  grid-area: profile;
+  display: flex;
+  justify-content: space-between;
+}
 .editProfileForm{
   grid-area: form;
   display: grid;
-  grid-template-rows: 100px 100px 100px 100px 100px 100px;
-  grid-template-areas:"name" "username" "bio" "email" "gender" "submit";
+  grid-template-rows: 100px 100px 100px 100px 100px 100px 100px;
+  grid-template-areas:"name" "username" "bio" "email" "age" "gender" "submit";
 }
 
 .editProfileContainer > .editProfile{ border-left: 2px solid black;}
@@ -48,6 +53,11 @@
 }
 .editProfile__emailContainer{
   grid-area: email;
+  display: flex;
+  justify-content: space-between;
+}
+.editProfile__ageContainer{
+  grid-area: age;
   display: flex;
   justify-content: space-between;
 }
