fix demo user bug

--- a/views/signup.pug
+++ b/views/signup.pug
@@ -52,7 +52,7 @@ block content
 
     div.signupBox.signupBox__login
       p Have an account?  
-      a(href="login") Log in
+      a(href="splash") Log in
       
     div.signupBox.signupBox__getApp
       p Get the app.
